<resources>
    <string name="app_name">MyWeatherApplication</string>
    <string name="get_weather_information">Get weather information</string>
    <string name="coordinates">Coordinates</string>
    <string name="city_name">City name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_weather_by_coordinates">Get weather by coordinates</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="plus_info">Plus info</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="get_weather_by_city_name">Get weather by city name</string>
    <string name="cty_name">the name of the city</string>
    <string name="the_weather_is">The weather is:</string>
    <string name="the_speed_of_the_wind">The speed of the wind is</string>
    <string name="use_current_location">Use current location</string>
    <string name="try_again">There was some problem during, getting the data, please try again later</string>
    <string name="coord_problem">Invalid coordinates!</string>
    <string name="name_problem">Invalid city name, please try again!</string>
    <string name="no_city_found">No city found</string>
</resources>
